ai/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: ollama
  ports:
    - port: 80
      name: http
      targetPort: open-webui
      protocol: TCP
